@@ -1,22 +1,25 @@
 package nostr.api.unit;
 
-import java.util.Arrays;
-import java.util.List;
-
+import lombok.SneakyThrows;
+import nostr.api.NIP61;
+import nostr.base.Relay;
+import nostr.event.BaseTag;
+import nostr.event.entities.Amount;
+import nostr.event.entities.CashuMint;
+import nostr.event.entities.CashuProof;
+import nostr.event.impl.GenericEvent;
+import nostr.event.tag.EventTag;
+import nostr.event.tag.GenericTag;
+import nostr.event.tag.PubKeyTag;
+import nostr.id.Identity;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import nostr.api.NIP60;
-import nostr.api.NIP61;
-import nostr.base.Mint;
-import nostr.base.Proof;
-import nostr.base.Relay;
-import nostr.event.BaseTag;
-import nostr.event.impl.GenericEvent;
-import nostr.event.tag.GenericTag;
-import nostr.event.tag.EventTag;
-import nostr.event.tag.PubKeyTag;
-import nostr.id.Identity;
+import java.net.URI;
+import java.util.Arrays;
+import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 
 public class NIP61Test {
 
@@ -24,16 +27,16 @@ public class NIP61Test {
     public void createNutzapInformationalEvent() {
         // Prepare
         Identity sender = Identity.generateRandomIdentity();
-        NIP61<GenericEvent> nip61 = new NIP61<>(sender);
+        NIP61 nip61 = new NIP61(sender);
 
         // Create test data
         List<String> pubkeys = Arrays.asList("pubkey1", "pubkey2");
         List<Relay> relays = Arrays.asList(
                 new Relay("wss://relay1.example.com"),
                 new Relay("wss://relay2.example.com"));
-        List<Mint> mints = Arrays.asList(
-                new Mint("https://mint1.example.com"),
-                new Mint("https://mint2.example.com"));
+        List<CashuMint> mints = Arrays.asList(
+                new CashuMint("https://mint1.example.com"),
+                new CashuMint("https://mint2.example.com"));
 
         // Create event
         GenericEvent event = nip61.createNutzapInformationalEvent(pubkeys, relays, mints).getEvent();
@@ -70,68 +73,75 @@ public class NIP61Test {
         Assertions.assertEquals("https://mint2.example.com", mintTags.get(1).getAttributes().get(0).getValue());
     }
 
+    @SneakyThrows
     @Test
     public void createNutzapEvent() {
         // Prepare
         Identity sender = Identity.generateRandomIdentity();
-        NIP61<GenericEvent> nip61 = new NIP61<>(sender);
+        NIP61 nip61 = new NIP61(sender);
 
         Identity recipientId = Identity.generateRandomIdentity();
 
         // Create test data
-        NIP60.SpendingHistory.Amount amount = new NIP60.SpendingHistory.Amount(100, "sat");
-        Mint mint = new Mint("https://mint.example.com");
+        Amount amount = new Amount(100, "sat");
+        CashuMint mint = new CashuMint("https://mint.example.com");
         // PublicKey recipient = new PublicKey("recipient-pubkey");
         String content = "Test content";
 
         // Optional proofs and events
-        Proof proof = new Proof();
+        CashuProof proof = new CashuProof();
         proof.setId("test-proof-id");
-        List<Proof> proofs = Arrays.asList(proof);
+        List<CashuProof> proofs = List.of(proof);
 
         EventTag eventTag = new EventTag();
         eventTag.setIdEvent("test-event-id");
-        List<EventTag> events = Arrays.asList(eventTag);
+        List<EventTag> events = List.of(eventTag);
 
         // Create event
-        GenericEvent event = nip61.createNutzapEvent(amount, proofs, mint, events, recipientId.getPublicKey(), content)
+        GenericEvent event = nip61.createNutzapEvent(
+                        amount,
+                        proofs,
+                        URI.create(mint.getUrl()).toURL(),
+                        events,
+                        recipientId.getPublicKey(),
+                        content)
                 .getEvent();
         List<BaseTag> tags = event.getTags();
 
         // Assert tags
-        Assertions.assertEquals(4, tags.size()); // url + amount + unit + pubkey
+        Assertions.assertEquals(6, tags.size()); // url + amount + unit + pubkey
 
         // Verify url tag
-        List<GenericTag> urlTags = tags.stream()
+        List<BaseTag> urlTags = tags.stream()
                 .filter(tag -> tag.getCode().equals("u"))
-                .map(tag -> (GenericTag) tag)
                 .toList();
+        assertInstanceOf(GenericTag.class, urlTags.get(0));
         Assertions.assertEquals(1, urlTags.size());
-        Assertions.assertEquals("https://mint.example.com", urlTags.get(0).getAttributes().get(0).getValue());
+        Assertions.assertEquals("https://mint.example.com", ((GenericTag) urlTags.get(0)).getAttributes().get(0).getValue());
 
         // Verify amount tag
-        List<GenericTag> amountTags = tags.stream()
+        List<BaseTag> amountTags = tags.stream()
                 .filter(tag -> tag.getCode().equals("amount"))
-                .map(tag -> (GenericTag) tag)
                 .toList();
+        assertInstanceOf(GenericTag.class, amountTags.get(0));
         Assertions.assertEquals(1, amountTags.size());
-        Assertions.assertEquals("100", amountTags.get(0).getAttributes().get(0).getValue());
+        Assertions.assertEquals("100", ((GenericTag) amountTags.get(0)).getAttributes().get(0).getValue());
 
         // Verify unit tag
-        List<GenericTag> unitTags = tags.stream()
+        List<BaseTag> unitTags = tags.stream()
                 .filter(tag -> tag.getCode().equals("unit"))
-                .map(tag -> (GenericTag) tag)
                 .toList();
+        assertInstanceOf(GenericTag.class, unitTags.get(0));
         Assertions.assertEquals(1, unitTags.size());
-        Assertions.assertEquals("sat", unitTags.get(0).getAttributes().get(0).getValue());
+        Assertions.assertEquals("sat", ((GenericTag) unitTags.get(0)).getAttributes().get(0).getValue());
 
         // Verify pubkey tag
-        List<PubKeyTag> pubkeyTags = tags.stream()
+        List<BaseTag> pubkeyTags = tags.stream()
                 .filter(tag -> tag.getCode().equals("p"))
-                .map(tag -> (PubKeyTag) tag)
                 .toList();
+        assertInstanceOf(PubKeyTag.class, pubkeyTags.get(0));
         Assertions.assertEquals(1, pubkeyTags.size());
-        Assertions.assertEquals(recipientId.getPublicKey().toString(), pubkeyTags.get(0).getPublicKey().toString());
+        Assertions.assertEquals(recipientId.getPublicKey().toString(), ((PubKeyTag)pubkeyTags.get(0)).getPublicKey().toString());
 
         // Assert content
         Assertions.assertEquals(content, event.getContent());
@@ -141,21 +151,24 @@ public class NIP61Test {
     public void createTags() {
         // Test P2PK tag creation
         String pubkey = "test-pubkey";
-        GenericTag p2pkTag = (GenericTag) NIP61.createP2pkTag(pubkey);
+        BaseTag p2pkTag = NIP61.createP2pkTag(pubkey);
+        assertInstanceOf(GenericTag.class, p2pkTag);
         Assertions.assertEquals("pubkey", p2pkTag.getCode());
-        Assertions.assertEquals(pubkey, p2pkTag.getAttributes().get(0).getValue());
+        Assertions.assertEquals(pubkey, ((GenericTag) p2pkTag).getAttributes().get(0).getValue());
 
         // Test URL tag creation
         String url = "https://example.com";
-        GenericTag urlTag = (GenericTag) NIP61.createUrlTag(url);
+        BaseTag urlTag = NIP61.createUrlTag(url);
+        assertInstanceOf(GenericTag.class, urlTag);
         Assertions.assertEquals("u", urlTag.getCode());
-        Assertions.assertEquals(url, urlTag.getAttributes().get(0).getValue());
+        Assertions.assertEquals(url, ((GenericTag) urlTag).getAttributes().get(0).getValue());
 
-        // Test Proof tag creation
-        Proof proof = new Proof();
+        // Test CashuProof tag creation
+        CashuProof proof = new CashuProof();
         proof.setId("test-proof-id");
-        GenericTag proofTag = (GenericTag) NIP61.createProofTag(proof);
+        BaseTag proofTag = NIP61.createProofTag(proof);
+        assertInstanceOf(GenericTag.class, proofTag);
         Assertions.assertEquals("proof", proofTag.getCode());
-        Assertions.assertTrue(proofTag.getAttributes().get(0).getValue().toString().contains("test-proof-id"));
+        Assertions.assertTrue(((GenericTag) proofTag).getAttributes().get(0).getValue().toString().contains("test-proof-id"));
     }
 }
